--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ gunicorn==21.2.0
 packaging==24.0
 phonenumbers==8.13.35
 pillow==10.3.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 reportlab==4.2.0
 sqlparse==0.5.0
 tzdata==2024.1
