--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ phonenumbers==8.13.35
 pillow==10.3.0
 psycopg2-binary==2.9.9
 reportlab==4.2.0
+requests==2.31.0
 sqlparse==0.5.0
 tzdata==2024.1
 whitenoise==6.6.0
